# polarity

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile.cli  Makefile  README.md  codecov.yml  flake.nix  foo.pol  package_artifact.sh
app/: Cargo.toml  README.md  build.rs
app/src/: global_settings.rs  main.rs  result.rs  rt.rs
app/src/cli/: check.rs  clean.rs  compile.rs  doc.rs  format.rs  gen_completions.rs  generate_completion.rs  lex.rs  lift.rs  locate_libs.rs  lsp.rs  mod.rs  prettify.rs  prompt.rs  repl.rs  run.rs  terminal.rs  texify.rs  xfunc.rs
app/src/utils/: codegen.rs  ignore_colors.rs  mod.rs
app/tests/: cli_test.rs  integration_test.rs
bench/: Cargo.toml
bench/src/: main.rs
lang/ast/: Cargo.toml
lang/ast/src/: decls.rs  exp.rs  ident.rs  lib.rs
lang/ast/src/ctx/: def.rs  levels.rs  map_idx.rs  mod.rs  values.rs
lang/ast/src/exp/: anno.rs  args.rs  call.rs  case.rs  closure.rs  do_block.rs  dot_call.rs  hole.rs  literal.rs  local_comatch.rs  local_let.rs  local_match.rs  mod.rs  telescope_inst.rs  typ_ctor.rs  type_univ.rs  variable.rs
lang/ast/src/traits/: contains_metavars.rs  free_vars.rs  has_span.rs  has_type.rs  identifiable.rs  mod.rs  named.rs  occurs.rs  rename.rs  shift.rs  subst.rs  whnf.rs  zonk.rs
lang/backend/: Cargo.toml
lang/backend/src/: lib.rs  result.rs
lang/backend/src/ast2ir/: decls.rs  exprs.rs  mod.rs  traits.rs
lang/backend/src/erasure/: ctx.rs  decls.rs  erasure_symbol_table.rs  exprs.rs  ir_symbol_table.rs  mod.rs  traits.rs
lang/backend/src/ir/: decls.rs  exprs.rs  ident.rs  kind.rs  lookup_table.rs  mod.rs  rename.rs  symbol_table.rs
lang/backend/src/ir2js/: decls.rs  exprs.rs  mod.rs  tokens.rs  traits.rs  util.rs
lang/core/: Cargo.toml
lang/core/src/: ctx.rs  eval.rs  lib.rs  ng.rs  normalize.rs  prg.rs  read_back.rs  result.rs  typecheck.rs  unify.rs
lang/docs/: Cargo.toml
lang/docs/src/: doc.rs  generate.rs  generate_docs.rs  index.json  json.rs  lib.rs  printer.rs  sidebar.rs  util.rs
lang/docs/src/render/: html.rs
lang/docs/templates/: codata.html  code.html  codef.html  data.html  def.html  extern.html  index.html  infix.html  let.html  module.html  note.html  style.css
lang/driver/: Cargo.toml
lang/driver/src/: asserts.rs  cache.rs  codespan.rs  database.rs  dependency_graph.rs  edit.rs  fs.rs  lib.rs  lift.rs  locate_std.rs  paths.rs  render_reports.rs  result.rs  semantic_tokens.rs  spans.rs  xfunc.rs
lang/driver/src/info/: collect.rs  data.rs  item.rs  lookup.rs  mod.rs
lang/driver/src/semantic_tokens/: collect.rs  mod.rs  types.rs
lang/elaborator/: Cargo.toml  README.md
lang/elaborator/src/: lib.rs  result.rs
lang/elaborator/src/conversion_checking/: constraints.rs  dec.rs  mod.rs  unify.rs
lang/elaborator/src/index_unification/: constraints.rs  dec.rs  mod.rs  unify.rs
lang/elaborator/src/normalizer/: env.rs  eval.rs  mod.rs  normalize.rs  read_back.rs  val.rs
lang/elaborator/src/typechecker/: ctx.rs  decls.rs  erasure.rs  lookup_table.rs  mod.rs  subst.rs  type_info_table.rs  typecheck.rs  util.rs
lang/elaborator/src/unifier/: constraints.rs  mod.rs  unify.rs
lang/elaborator/templates/: var_rule.txt
lang/lifting/: Cargo.toml
lang/lifting/src/: fv.rs  lib.rs  lift.rs
lang/lowering/: Cargo.toml
lang/lowering/src/: ctx.rs  downsweep.rs  ext.rs  imp.rs  lib.rs  lookup_table.rs  lower.rs  result.rs  types.rs
lang/lowering/src/lookup_table/: build.rs  lookup.rs  mod.rs
lang/lowering/src/lower/: decls.rs  exp.rs  mod.rs
lang/lowering/src/symbol_table/: build.rs  lookup.rs  mod.rs
lang/lsp/: Cargo.toml
lang/lsp/src/: capabilities.rs  codeactions.rs  diagnostics.rs  format.rs  gotodefinition.rs  hover.rs  lib.rs  semantic_tokens.rs  server.rs
lang/lsp/src/conversion/: mod.rs  spans.rs  uri_to_url.rs
lang/miette_util/: Cargo.toml
lang/miette_util/src/: codespan.rs  lib.rs
lang/normalizer/: Cargo.toml  README.md
lang/normalizer/src/: env.rs  eval.rs  lib.rs  normalize.rs  read_back.rs  result.rs  val.rs
lang/parser/: Cargo.toml
lang/parser/src/: cst.rs  lib.rs  result.rs
lang/parser/src/cst/: decls.rs  exp.rs  ident.rs  mod.rs
lang/parser/src/grammar/: cst.lalrpop  mod.rs  util.rs
lang/parser/src/lexer/: mod.rs
lang/printer/: Cargo.toml
lang/printer/src/: ast.rs  ctx.rs  de_bruijn.rs  dec.rs  env.rs  fragments.rs  generic.rs  latex.rs  lib.rs  nf.rs  print_to_string.rs  theme.rs  tokens.rs  types.rs  ust.rs  util.rs  val.rs
lang/printer/src/render/: html.rs  latex.rs  mod.rs  termcolor.rs  typst.rs
lang/query/: Cargo.toml
lang/query/src/: asserts.rs  cache.rs  database.rs  dependency_graph.rs  edit.rs  fs.rs  index.rs  info.rs  lib.rs  lift.rs  load.rs  modules.rs  result.rs  rt.rs  spans.rs  view_mut.rs  xfunc.rs
lang/query/src/info/: collect.rs  data.rs  mod.rs
lang/query/src/view/: edit.rs  lift.rs  mod.rs  rt.rs  spans.rs  xfunc.rs
lang/renaming/: Cargo.toml
lang/renaming/src/: ast.rs  ctx.rs  generic.rs  lib.rs  ust.rs  util.rs  wst.rs
lang/source/: Cargo.toml
lang/source/src/: asserts.rs  index.rs  info.rs  lib.rs  result.rs  view_mut.rs
lang/source/src/view/: lift.rs  mod.rs  rt.rs  xfunc.rs
lang/syntax/: Cargo.toml
lang/syntax/src/: ast.rs  common.rs  cst.rs  de_bruijn.rs  elab.rs  env.rs  equiv.rs  leveled_ctx.rs  lib.rs  matrix.rs  named.rs  tst.rs  ust.rs  values.rs
lang/transformations/: Cargo.toml
lang/transformations/src/: lib.rs
lang/unifier/: Cargo.toml
lang/unifier/src/: lib.rs  result.rs  unify.rs
lang/xfunc/: Cargo.toml
lang/xfunc/src/: lib.rs  matrix.rs  repr.rs  result.rs
test/test-runner/: Cargo.toml
test/test-runner/src/: cases.rs  index.rs  infallible.rs  main.rs  phases.rs  runner.rs  suites.rs
util/lsp/: Cargo.toml  README.md
util/lsp/src/: capabilities.rs  codeactions.rs  conversion.rs  diagnostics.rs  format.rs  gotodefinition.rs  hover.rs  lib.rs  server.rs
util/miette_util/: Cargo.toml
util/miette_util/src/: lib.rs
web/crates/browser/: Cargo.toml
web/crates/lsp-wasm/: Cargo.toml
(+830 files in other folders)
