[workspace]
members = [
    "lang/ast",
    "lang/parser",
    "lang/lowering",
    "lang/lsp",
    "lang/miette_util",
    "lang/printer",
    "lang/elaborator",
    "lang/driver",
    "lang/transformations",
    "lang/backend",
    "web/crates/browser",
    "app",
    "test/test-runner",
]
resolver = "2"
default-members = ["app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Tim Süberkrüb", "David Binder"]
license = "MIT OR Apache-2.0"
homepage = "https://polarity-lang.github.io/"
repository = "https://github.com/polarity/polarity"
categories = ["compilers"]

[workspace.dependencies]
# fancy error messages
miette = { version = "7" }
thiserror = { version = "1" }
# lsp server
tower-lsp = { git = "https://github.com/tower-lsp/tower-lsp", rev = "19f5a87810ff4b643d2bc394e438450bd9c74365", default-features = false, features = [
    "runtime-agnostic",
] }
# source code locations
codespan = { git = "https://github.com/polarity-lang/codespan.git", rev = "91e4f64801cee923661097eb35e05a782996d8ea" }
# ignoring fields when deriving traits (e.g. Eq, Hash)
derivative = { version = "2" }
# big integers
num-bigint = { version = "0.4" }
# url (for file locations)
url = { version = "2.5.0" }
pretty = { version = "0.11", features = ["termcolor"] }
# logging infrastructure
log = "0.4.21"
env_logger = "0.11.3"
