[workspace]
members = [
    "lang/ast",
    "lang/parser",
    "lang/lowering",
    "lang/lsp",
    "lang/miette_util",
    "lang/printer",
    "lang/elaborator",
    "lang/driver",
    "lang/transformations",
    "lang/backend",
    "web/crates/browser",
    "app",
    "bench",
    "test/test-runner",
]
resolver = "2"
default-members = ["app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Tim Süberkrüb", "David Binder"]
license = "MIT OR Apache-2.0"
homepage = "https://polarity-lang.github.io/"
repository = "https://github.com/polarity/polarity"
categories = ["compilers"]

[workspace.dependencies]
# fancy error messages
miette = { version = "7" }
thiserror = { version = "1" }
# lsp server
lsp-types = { version = "0.97" }
tower-lsp-server = { git = "https://github.com/tower-lsp-community/tower-lsp-server", rev = "ae955f1d1c2a86bf675cc9bd0638e4c684864a6d", default-features = false, features = [
    "runtime-agnostic",
] }
# ignoring fields when deriving traits (e.g. Eq, Hash)
derivative = { version = "2" }
# big integers
num-bigint = { version = "0.4" }
# url (for file locations)
url = { version = "2.5.0" }
pretty = { version = "0.11", features = ["termcolor"] }
# logging infrastructure
log = "0.4.21"
env_logger = "0.11.3"
