[workspace]
members = [
    "lang/ast",
    "lang/parser",
    "lang/lowering",
    "lang/lsp",
    "lang/miette_util",
    "lang/printer",
    "lang/elaborator",
    "lang/driver",
    "lang/transformations",
    "lang/backend",
    "web/crates/lsp-wasm",
    "app",
    "bench",
    "test/test-runner",
]
resolver = "2"
default-members = ["app"]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
authors      = ["Tim Süberkrüb", "David Binder"]
license      = "MIT OR Apache-2.0"
homepage     = "https://polarity-lang.github.io/"
repository   = "https://github.com/polarity-lang/polarity"
categories   = ["compilers"]

# In order to keep all the information about the version bounds of our dependencies in one place we
# define these here.
[workspace.dependencies]
askama                   = { version = "0.12.1" }
askama_escape            = { version = "0.10.3" }
assert_cmd               = { version = "2.0.14" }
async-lock               = { version = "2" }
async-std                = { version = "1" }
async-trait              = { version = "0.1"}
clap                     = { version = "4" }
clap_complete            = { version = "4.5.38"}
comrak                   = { version = "0.32" }
console_error_panic_hook = { version = "0.1" }
console_log              = { version = "1" }
criterion                = { version = "0.5" }
derivative               = { version = "2" }
env_logger               = { version = "0.11.3" }
futures                  = { version = "0.3" }
fxhash                   = { version = "0.2.1" }
js-sys                   = { version = "0.3" }
lalrpop                  = { version = "0.22.2" }
lalrpop-util             = { version = "0.22.2" }
log                      = { version = "0.4.21" }
logos                    = { version = "0.15.1" }
lsp-types                = { version = "0.97" }
miette                   = { version = "7", features = ["fancy"] }
num-bigint               = { version = "0.4" }
opener                   = { version = "0.5" }
pretty                   = { version = "0.11", features = ["termcolor"] }
reqwest                  = { version = "0.12" }
ropey                    = { version = "1" }
rust-lapper              = { version = "1" }
serde                    = { version = "1" }
serde_derive             = { version = "1" }
tantivy                  = { version = "0.18" }
termcolor                = { version = "1.4.1" }
termsize                 = { version = "0.1" }
thiserror                = { version = "1" }
tokio                    = { version = "1" }
toml                     = { version = "0.5" }
tower-lsp-server         = { version = "0.21" , default-features = false, features = [
    "runtime-agnostic",
] }
url                      = { version = "2.5.0" }
walkdir                  = { version = "2.5.0" }
wasm-bindgen             = { version = "0.2" }
wasm-bindgen-futures     = { version = "0.4" }
wasm-streams             = { version = "0.2" }
web-sys                  = { version = "0.3" }

# workspace members
polarity-lang-ast             = { version = "0.1.0", path = "./lang/ast" }
polarity-lang-backend         = { version = "0.1.0", path = "./lang/backend" }
polarity-lang-docs            = { version = "0.1.0", path = "./lang/docs" }
polarity-lang-driver          = { version = "0.1.0", path = "./lang/driver" }
polarity-lang-elaborator      = { version = "0.1.0", path = "./lang/elaborator" }
polarity-lang-lowering        = { version = "0.1.0", path = "./lang/lowering" }
polarity-lang-lsp-server      = { version = "0.1.0", path = "./lang/lsp" }
polarity-lang-miette-util     = { version = "0.1.0", path = "./lang/miette_util" }
polarity-lang-parser          = { version = "0.1.0", path = "./lang/parser" }
polarity-lang-printer         = { version = "0.1.0", path = "./lang/printer" }
polarity-lang-transformations = { version = "0.1.0", path = "./lang/transformations" }
