[package]
name = "polarity"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[[bin]]
name = "pol"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# cli
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4.5.38" }
termsize = "0.1"
# fancy error messages
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
# Logging infrastructure
env_logger = { workspace = true }
log = { workspace = true }
# lsp
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
async-std = "1"
tower-lsp-server = { workspace = true }
# workspace members
polarity-lang-driver = { path = "../lang/driver" }
polarity-lang-elaborator = { path = "../lang/elaborator" }
polarity-lang-ast = { path = "../lang/ast" }
polarity-lang-printer = { path = "../lang/printer" }
polarity-lang-parser = { path = "../lang/parser" }
polarity-lang-lsp-server = { path = "../lang/lsp" }
polarity-lang-docs = { path = "../lang/docs" }

[dev-dependencies]
# For testing the binary
assert_cmd = "2.0.14"
