[package]
name = "polarity"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[[bin]]
name = "pol"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std        = { workspace = true }
clap             = { workspace = true, features = ["derive"] }
clap_complete    = { workspace = true }
env_logger       = { workspace = true }
futures          = { workspace = true }
log              = { workspace = true }
miette           = { workspace = true, features = ["fancy"] }
termsize         = { workspace = true }
thiserror        = { workspace = true }
tokio            = { workspace = true, features = ["rt-multi-thread"] }
tower-lsp-server = { workspace = true }

# workspace dependencies
polarity-lang-ast        = { path = "../lang/ast" }
polarity-lang-docs       = { path = "../lang/docs" }
polarity-lang-driver     = { path = "../lang/driver" }
polarity-lang-elaborator = { path = "../lang/elaborator" }
polarity-lang-parser     = { path = "../lang/parser" }
polarity-lang-printer    = { path = "../lang/printer" }
polarity-lang-lsp-server = { path = "../lang/lsp" }

[dev-dependencies]
assert_cmd = { workspace = true }
