[package]
name = "polarity"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

description = "Binary of the polarity programming language"

[[bin]]
name = "pol"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std        = { workspace = true }
clap             = { workspace = true, features = ["derive"] }
clap_complete    = { workspace = true }
env_logger       = { workspace = true }
futures          = { workspace = true }
log              = { workspace = true }
miette           = { workspace = true, features = ["fancy"] }
termsize         = { workspace = true }
thiserror        = { workspace = true }
tokio            = { workspace = true, features = ["rt-multi-thread"] }
tower-lsp-server = { workspace = true }

# workspace dependencies
polarity-lang-ast        = { workspace = true }
polarity-lang-docs       = { workspace = true }
polarity-lang-driver     = { workspace = true }
polarity-lang-elaborator = { workspace = true }
polarity-lang-parser     = { workspace = true }
polarity-lang-printer    = { workspace = true }
polarity-lang-lsp-server = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
