[package]
name = "polarity-bench"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[[bin]]
name = "pol-bench"
path = "src/main.rs"

[dependencies]
# runtime
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
async-std = "1"
url = "2"
# fancy error messages
miette = { workspace = true, features = ["fancy"] }
# benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# workspace members
polarity-lang-driver = { path = "../lang/driver" }
polarity-lang-elaborator = { path = "../lang/elaborator" }
polarity-lang-ast = { path = "../lang/ast" }
polarity-lang-printer = { path = "../lang/printer" }
polarity-lang-lsp-server = { path = "../lang/lsp" }
polarity-lang-docs = { path = "../lang/docs" }

