[package]
name = "polarity-bench"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[[bin]]
name = "pol-bench"
path = "src/main.rs"

[dependencies]
async-std = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
futures   = { workspace = true }
miette    = { workspace = true, features = ["fancy"] }
tokio     = { workspace = true, features = ["rt-multi-thread"] }
url       = { workspace = true }

# workspace dependencies
polarity-lang-ast        = { path = "../lang/ast" }
polarity-lang-docs       = { path = "../lang/docs" }
polarity-lang-driver     = { path = "../lang/driver" }
polarity-lang-elaborator = { path = "../lang/elaborator" }
polarity-lang-lsp-server = { path = "../lang/lsp" }
polarity-lang-printer    = { path = "../lang/printer" }



