[package]
name = "polarity-bench"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[[bin]]
name = "pol-bench"
path = "src/main.rs"

[dependencies]
async-std = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
futures   = { workspace = true }
miette    = { workspace = true, features = ["fancy"] }
tokio     = { workspace = true, features = ["rt-multi-thread"] }
url       = { workspace = true }

# workspace dependencies
polarity-lang-ast        = { workspace = true }
polarity-lang-docs       = { workspace = true }
polarity-lang-driver     = { workspace = true }
polarity-lang-elaborator = { workspace = true }
polarity-lang-lsp-server = { workspace = true }
polarity-lang-printer    = { workspace = true }



