[package]
name = "polarity-lang-ast"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
derivative = { workspace = true }
fxhash     = { workspace = true }
miette     = { workspace = true }
num-bigint = { workspace = true }
pretty     = { workspace = true }
thiserror  = { workspace = true }
url        = { workspace = true }

# workspace dependencies
polarity-lang-miette-util = { path = "../miette_util" }
polarity-lang-printer     = { path = "../printer" }
