[package]
name = "polarity-lang-ast"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

description = "Internal component of the Polarity language: Abstract syntax trees"

[dependencies]
derivative = { workspace = true }
fxhash     = { workspace = true }
miette     = { workspace = true }
pretty     = { workspace = true }
thiserror  = { workspace = true }
url        = { workspace = true }

# workspace dependencies
polarity-lang-miette-util = { workspace = true }
polarity-lang-printer     = { workspace = true }
