[package]
name = "polarity-lang-backend"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
miette    = { workspace = true }
thiserror = { workspace = true }
url       = { workspace = true }

# workspace dependencies
polarity-lang-ast     = { path = "../ast" }
polarity-lang-printer = { path = "../printer" }
