[package]
name = "polarity-lang-backend"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

description = "Internal component of the polarity language: Code generation"

[dependencies]
miette    = { workspace = true }
thiserror = { workspace = true }
url       = { workspace = true }

# workspace dependencies
polarity-lang-ast     = { workspace = true }
polarity-lang-printer = { workspace = true }
