[package]
name = "polarity-lang-backend"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

description = "Internal component of the Polarity language: Code generation"

[dependencies]
miette    = { workspace = true }
thiserror = { workspace = true }
url       = { workspace = true }

# SWC for JS code generation
swc_ecma_ast     = { workspace = true }
swc_ecma_codegen = { workspace = true }
swc_common       = { workspace = true }

# workspace dependencies
polarity-lang-ast     = { workspace = true }
polarity-lang-printer = { workspace = true }
