[package]
name = "polarity-lang-docs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
pretty = { workspace = true }
opener = "0.5"
askama = "0.12.1"
askama_escape = "0.10.3"
comrak = "0.32"
# url (for file locations)
url = "2.5.0"

# workspace members
polarity-lang-ast = { path = "../ast" }
polarity-lang-printer = { path = "../printer" }
polarity-lang-driver = { path = "../driver" }

