[package]
name = "polarity-lang-docs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
askama        = { workspace = true }
askama_escape = { workspace = true }
comrak        = { workspace = true }
opener        = { workspace = true }
pretty        = { workspace = true }
url           = { workspace = true }

# workspace dependencies
polarity-lang-ast     = { path = "../ast" }
polarity-lang-driver  = { path = "../driver" }
polarity-lang-printer = { path = "../printer" }


