[package]
name = "polarity-lang-docs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

description = "Internal component of the Polarity language: Documentation generator"
include = ["/src", "/templates"]

[dependencies]
askama        = { workspace = true }
askama_escape = { workspace = true }
comrak        = { workspace = true }
opener        = { workspace = true }
pretty        = { workspace = true }
url           = { workspace = true }

# workspace dependencies
polarity-lang-ast     = { workspace = true }
polarity-lang-driver  = { workspace = true }
polarity-lang-printer = { workspace = true }
