[package]
name = "polarity-lang-driver"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
async-trait = { workspace = true }
log         = { workspace = true }
lsp-types   = { workspace = true }
miette      = { workspace = true }
ropey       = { workspace = true }
rust-lapper = { workspace = true }
thiserror   = { workspace = true }
url         = { workspace = true }

# workspace dependencies
polarity-lang-ast             = { path = "../ast" }
polarity-lang-lowering        = { path = "../lowering" }
polarity-lang-elaborator      = { path = "../elaborator" }
polarity-lang-printer         = { path = "../printer" }
polarity-lang-parser          = { path = "../parser" }
polarity-lang-transformations = { path = "../transformations" }
polarity-lang-backend         = { path = "../backend" }
polarity-lang-miette-util     = { path = "../miette_util" }
