[package]
name = "polarity-lang-driver"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
async-trait = { workspace = true }
log         = { workspace = true }
lsp-types   = { workspace = true }
miette      = { workspace = true }
ropey       = { workspace = true }
rust-lapper = { workspace = true }
thiserror   = { workspace = true }
url         = { workspace = true }

# workspace dependencies
polarity-lang-ast             = { workspace = true }
polarity-lang-lowering        = { workspace = true }
polarity-lang-elaborator      = { workspace = true }
polarity-lang-printer         = { workspace = true }
polarity-lang-parser          = { workspace = true }
polarity-lang-transformations = { workspace = true }
polarity-lang-backend         = { workspace = true }
polarity-lang-miette-util     = { workspace = true }
