[package]
name = "polarity-lang-elaborator"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }
derivative = { workspace = true }
pretty = { workspace = true }
log = { workspace = true }
url = { workspace = true }

# workspace members
polarity-lang-ast = { path = "../ast" }
polarity-lang-printer = { path = "../printer" }
polarity-lang-miette-util = { path = "../miette_util" }
