[package]
name = "lifting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# source code locations
codespan = "0.11"
# ignoring fields when deriving traits (e.g. Eq, Hash)
derivative = "2"
# workspace members
data = { path = "../../util/data" }
syntax = { path = "../syntax" }
renaming = { path = "../renaming" }
