[package]
name = "lifting"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
codespan = { workspace = true }
derivative = { workspace = true }
# workspace members
syntax = { path = "../syntax" }
renaming = { path = "../renaming" }
