[package]
name = "polarity-lang-lowering"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }
# big integers
num-bigint = { workspace = true }
log = { workspace = true }
url = { workspace = true }

# workspace members
polarity-lang-printer = { path = "../printer" }
polarity-lang-parser = { path = "../parser" }
polarity-lang-ast = { path = "../ast" }
polarity-lang-miette_util = { path = "../miette_util" }
