[package]
name = "polarity-lang-lowering"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
log        = { workspace = true }
miette     = { workspace = true }
num-bigint = { workspace = true }
thiserror  = { workspace = true }
url        = { workspace = true }

# workspace dependencies
polarity-lang-ast         = { path = "../ast" }
polarity-lang-miette-util = { path = "../miette_util" }
polarity-lang-parser      = { path = "../parser" }
polarity-lang-printer     = { path = "../printer" }
