[package]
name = "polarity-lang-lowering"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

description = "Internal component of the Polarity language: Lowering and name resolution"

[dependencies]
log        = { workspace = true }
miette     = { workspace = true }
thiserror  = { workspace = true }
url        = { workspace = true }

# workspace dependencies
polarity-lang-ast         = { workspace = true }
polarity-lang-miette-util = { workspace = true }
polarity-lang-parser      = { workspace = true }
polarity-lang-printer     = { workspace = true }
