[package]
name = "polarity-lang-lsp-server"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
# lsp
tower-lsp-server = { workspace = true }
# asynchronous locks
async-lock = "2"
# fancy error messages
miette = { workspace = true }
# URLs
url = { workspace = true }
# workspace members
polarity-lang-ast = { path = "../ast" }
polarity-lang-driver = { path = "../driver" }
polarity-lang-printer = { path = "../printer" }
polarity-lang-miette_util = { path = "../miette_util" }
