[package]
name = "polarity-lang-lsp-server"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
async-lock       = { workspace = true }
miette           = { workspace = true }
tower-lsp-server = { workspace = true }
url              = { workspace = true }

# workspace dependencies
polarity-lang-ast         = { path = "../ast" }
polarity-lang-driver      = { path = "../driver" }
polarity-lang-miette-util = { path = "../miette_util" }
polarity-lang-printer     = { path = "../printer" }
