[package]
name = "polarity-lang-lsp-server"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

description = "Internal component of the Polarity language: Language server protocol implementation"

[dependencies]
async-lock       = { workspace = true }
miette           = { workspace = true }
tower-lsp-server = { workspace = true }
url              = { workspace = true }

# workspace dependencies
polarity-lang-ast         = { workspace = true }
polarity-lang-driver      = { workspace = true }
polarity-lang-miette-util = { workspace = true }
polarity-lang-printer     = { workspace = true }
