[package]
name = "miette_util"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
miette = { workspace = true }
codespan = { workspace = true }
