[package]
name = "polarity-lang-miette-util"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

description = "Internal component of the Polarity language: Utilities for the miette library"

[dependencies]
miette = { workspace = true }
