[package]
name = "polarity-lang-parser"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
# lexer generator
logos = "0.14.0"
# Deriving
derivative = { workspace = true }
# parser generator
lalrpop = "0.20"
lalrpop-util = "0.20"
# url (for file locations)
url = "2.5.0"
miette = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }
# Workspace members
polarity-lang-miette_util = { path = "../miette_util" }

[build-dependencies.lalrpop]
version = "0.19"
features = ["lexer"]
