[package]
name = "polarity-lang-parser"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
derivative   = { workspace = true }
lalrpop      = { workspace = true }
lalrpop-util = { workspace = true }
logos        = { workspace = true }
miette       = { workspace = true }
num-bigint   = { workspace = true }
thiserror    = { workspace = true }
url          = { workspace = true }

# workspace dependencies
polarity-lang-miette-util = { path = "../miette_util" }

[build-dependencies.lalrpop]
version = "0.19"
features = ["lexer"]
