[package]
name = "polarity-lang-parser"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

description = "Internal component of the Polarity language: Lexing and parsing"

[dependencies]
derivative   = { workspace = true }
lalrpop      = { workspace = true }
lalrpop-util = { workspace = true }
logos        = { workspace = true }
miette       = { workspace = true }
num-bigint   = { workspace = true }
thiserror    = { workspace = true }
url          = { workspace = true }

# workspace dependencies
polarity-lang-miette-util = { workspace = true }

[build-dependencies.lalrpop]
workspace = true
