[package]
name = "polarity-lang-printer"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
askama_escape = { workspace = true }
pretty        = { workspace = true }
url           = { workspace = true }