[package]
name = "polarity-lang-printer"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

description = "Internal component of the polarity language: Prettyprinter with multiple backends"

[dependencies]
askama_escape = { workspace = true }
pretty        = { workspace = true }
url           = { workspace = true }