[package]
name = "query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# url (for file locations)
url = "2.5.0"
# source code spans
codespan = "0.11"
# index of source code intervals
rust-lapper = "1"
# text rope
ropey = "1"
# fancy error messages
miette = "5"
thiserror = "1"
# workspace members
syntax = { path = "../syntax" }
lowering = { path = "../lowering" }
elaborator = { path = "../elaborator" }
printer = { path = "../printer" }
parser = { path = "../parser" }
renaming = { path = "../renaming" }
xfunc = { path = "../xfunc" }
lifting = { path = "../lifting" }
