[package]
name = "query"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
# url (for file locations)
url = "2.5.0"
# source code spans
codespan = { git = "https://github.com/polarity-lang/codespan.git", rev = "542320ab177fd38fff3a398a97b3f0352e065149"}
# index of source code intervals
rust-lapper = "1"
# text rope
ropey = "1"
# fancy error messages
miette = "5"
thiserror = "1"
# workspace members
syntax = { path = "../syntax" }
lowering = { path = "../lowering" }
elaborator = { path = "../elaborator" }
printer = { path = "../printer" }
parser = { path = "../parser" }
renaming = { path = "../renaming" }
xfunc = { path = "../xfunc" }
lifting = { path = "../lifting" }
