[package]
name = "query"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
url = { workspace = true }
codespan = { workspace = true }
# index of source code intervals
rust-lapper = "1"
# text rope
ropey = "1"
# fancy error messages
miette = { workspace = true }
thiserror = { workspace = true }
# workspace members
ast = { path = "../ast" }
lowering = { path = "../lowering" }
elaborator = { path = "../elaborator" }
printer = { path = "../printer" }
parser = { path = "../parser" }
renaming = { path = "../renaming" }
xfunc = { path = "../xfunc" }
lifting = { path = "../lifting" }
