[package]
name = "renaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# source code locations
codespan = "0.11"
# workspace members
data = { path = "../../util/data" }
syntax = { path = "../syntax" }
parser = { path = "../parser" }
