[package]
name = "renaming"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
# source code locations
codespan = { workspace = true }
# workspace members
ast = { path = "../ast" }
