[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
# fancy error messages
miette = "5"
thiserror = "1"
# source code locations
codespan = "0.11"
# ignoring fields when deriving traits (e.g. Eq, Hash)
derivative = "2"
# big integers
num-bigint = "0.4"
# lazy static
lazy_static = "1.4.0"
fxhash = "0.2.1"
# workspace members
miette_util = { path = "../../util/miette_util" }
