[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
# fancy error messages
miette = "5"
thiserror = "1"
# url (for file locations)
url = "2.5.0"
# source code locations
codespan = { git = "https://github.com/polarity-lang/codespan.git", rev = "542320ab177fd38fff3a398a97b3f0352e065149"}
# ignoring fields when deriving traits (e.g. Eq, Hash)
derivative = "2"
# big integers
num-bigint = "0.4"
# lazy static
fxhash = "0.2.1"
# workspace members
miette_util = { path = "../miette_util" }
